Added enchanting catalyst panel